syntax = "proto3";

option java_package = "edu.neu.DatastoreService";

service DatastoreService {

    rpc put(PutRequest) returns (APIResponse);

    rpc get(GetRequest) returns (APIResponse);

    rpc delete(DeleteRequest) returns (APIResponse);
}

message PutRequest {

    string key = 1;
    string value = 2;
    string caller = 3;
}

message GetRequest {

    string key = 1;
}

message DeleteRequest {

    string key = 1;
    string caller = 2;
}

message APIResponse {

    string value = 1;
    int32 responseCode = 2;
    string responseText = 3;
}